@@ -2,6 +2,7 @@
 
 * Enhancements
   * Administrators can now allow applicants and trainees fill out annual information
+  * Administrators can now export selected applicants information to a CSV file
   * Minor layout changes
 
 == 0.4.2
